displayed moods with button using javascript

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -21,3 +21,10 @@ body{
     padding: 0.5em;
     text-decoration:none;
 }
+
+nav{
+    background-color: chocolate;
+    font-size: 14px;
+    font-family: 'Courier New', Courier, monospace
+    ;
+}
